Fixing some of the easier code review comments